# gaalafis

./: .gitignore  LICENSE  README.md
.github/workflows/: build-docker-on-pr.yml  docker-images.yml  e2e-tests.yml  test-docker.yml  tests-on-main.yml  tests-on-pr.yml  unit-tests-on-main.yml  unit-tests-on-pr.yml
documentation/design/: README.md  main.tex  (+1 more)
modules/auth/commands/git-lfs-authenticate/: Cargo.toml
modules/auth/commands/git-lfs-authenticate/src/: command_errors.rs  config.rs  gitolite.rs  jwt.rs  main.rs  response.rs
modules/lfs-server/: Cargo.toml  Dockerfile  Dockerfile.prod
modules/lfs-server/src/: config.rs  injected_services.rs  lib.rs  main.rs  server.rs
modules/lfs-server/src/api/: enums.rs  jwt.rs  repo_query.rs
modules/lfs-server/src/api/locks/: body.rs  response.rs
modules/lfs-server/src/api/objects_batch/: body.rs  response.rs
modules/lfs-server/src/controllers/: errors.rs  locks.rs
modules/lfs-server/src/controllers/objects/: batch.rs  download.rs  upload.rs
modules/lfs-server/src/server/: config.rs  injected_services.rs  run_server.rs
modules/lfs-server/src/services/: custom_link_signer.rs  injected_services.rs  jwt.rs  jwt_token_decoder.rs  jwt_token_encoder_decoder.rs
modules/lfs-server/src/services/fs/: local_file_storage.rs
modules/lfs-server/src/services/minio/: single_bucket_storage.rs
modules/lfs-server/src/services/postgres/: postgres_lock_row.rs  postgres_locks_provider.rs  sql_query_builder.rs
modules/lfs-server/src/test_utils/: helpers.rs  mocks.rs
modules/lfs-server/src/traits/: file_storage.rs  locks.rs  services.rs  token_decoder.rs  token_encoder_decoder.rs
modules/lfs-server/tests/: objects.rs  proxy_fs.rs  proxy_fs_locks_pg.rs  proxy_sbs.rs  proxy_sbs_locks_pg.rs  signer_sbs.rs  signer_sbs_locks_pg.rs
modules/lfs-server/tests/common/: app_utils.rs  batch_objects.rs  http_utils.rs  mod.rs
modules/lfs-server/tests/scenario/: batch_object_exit_directory_attack.rs  batch_objects_nominal.rs  locks_nominal.rs  mod.rs
tests/: README.md  architectures.json  build.sh  build_and_test.sh  make_secrets.sh  start.sh
(+103 files in other folders)
