[package]
name = "lfs-info-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = "0.6.20"
base64 = "0.21.4"
chrono = "0.4.30"
deadpool-postgres = "0.11.0"
hmac = "0.12.1"
jwt = "0.16.0"
rust-s3 = "0.33.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
sha2 = "0.10.7"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7.10"
tokio-test = "0.4.3"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
futures-util = "0.3.28"

[dev-dependencies]
mockall = "0.11.4"
rand = "0.8.5"
hex = "0.4.3"
uuid = { version =  "1.6.1", features = ["v4"] }
tower = { version =  "0.4.13", features = ["util"] }
http-body-util = "0.1.0"
http = "1.0.0"
regex = "1.10.2"
tokio-io = "0.1.13"
hyper = { version = "1.1.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.1", features = ["tokio"] }
